# serpent_code

./: README.md
serpent/: providers.yaml  pyproject.toml
serpent/serpent/: __init__.py  __main__.py  cli.py  config.py  guard.py  logging_config.py  repl.py  session.py
serpent/serpent/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
serpent/serpent/tools/: __init__.py  base.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  registry.py  write_file.py
