[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serpent-cli"
version = "0.1.0"
description = "A minimal Python AI coding agent for the terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["ai", "coding", "agent", "cli", "terminal", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.7.0",
    "aiohttp>=3.9.0",
    "structlog>=24.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
serpent = "serpent.cli:main"
spt = "serpent.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/serpent"
Repository = "https://github.com/yourusername/serpent"
Issues = "https://github.com/yourusername/serpent/issues"

[tool.hatch.build.targets.wheel]
packages = ["serpent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true